# Graduation

./: .gitignore  AGENTS.md  README.md  findings.md  pdf_text.txt  research-log.md  research-state.yaml
data/: README.md
docs/: AGENTS.md  README.md  active_skills_reference.md  codex_skills_plan.md  vision_bringup_runtime_guide.md
experiments/: README.md
experiments/H1-end-camera-visual-tracking/: analysis.md  protocol.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gradua/share/gradua/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gradua/share/gradua/launch/: camera_preview.launch.py  undistort_preview.launch.py
literature/: README.md  survey.md
log/: latest_build  latest_list
paper/: AGENTS.md  README.md
paper/tex/: README.md
references/: README.md
src/Gradua/: AGENTS.md  CameraPreview.py  package.xml  setup.cfg  setup.py
src/Gradua/gradua/: __init__.py  undistort_preview_node.py
src/Gradua/launch/: undistort_preview.launch.py
src/Identification_code/: LabelImg_中文使用说明.md  README.md  data.yaml  infer_yolo26.py  labelImg.py  replot_from_csv.py  requirements.txt  split_dataset.py  train_yolo26.py  video_frames.py  xml_to_yolo.py
src/calibration/: README.md  calibrate_checkerboard.py  calibrate_usb_camera.py  capture_checkerboard.py  preview_raw_camera.py  preview_undistort.py  requirements.txt
src/control/: AGENTS.md  filter_utils.py  first_joint_simulation.py  keyboard_cartesian_control.py  keyboard_joint_control.py  multi_joint_kinematics.py  (+7 more)
to_human/: README.md
(+387 files in other folders)
