<?xml version="1.0"?>
<package format="3">
  <name>gradua</name>
  <version>0.0.1</version>
  <description>Minimal ROS2 package for fast undistort and topic preview nodes.</description>
  <maintainer email="lsx@example.com">lsx</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
